Perkin-UAT/force-app/main/default/objects/Contact/fields/Accelerator_Details__c.field-meta.xml
<CustomField>
    <fullName>Accelerator_Details__c</fullName>
    <description>ANNUITAS PDG Program</description>
    <label>Accelerator Details</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>