Perkin-UAT/force-app/main/default/objects/Contact/fields/Accpunt_Legacy_ID__c.field-meta.xml
<CustomField>
    <fullName>Accpunt_Legacy_ID__c</fullName>
    <formula>Account.LegacyAcctID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Accpunt Legacy ID</label>
    <type>Text</type>
</CustomField>