Perkin-UAT/force-app/main/default/objects/Contact/fields/Additional_Notes_Comments__c.field-meta.xml
<CustomField>
    <fullName>Additional_Notes_Comments__c</fullName>
    <label>Additional Notes &amp; Comments</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>