Perkin-UAT/force-app/main/default/objects/Contact/fields/Analytical_Mail_List__c.field-meta.xml
<CustomField>
    <fullName>Analytical_Mail_List__c</fullName>
    <formula>if(  AA_List__c  ,&quot;TRUE&quot;,if(   FLR_List__c   ,&quot;TRUE&quot;,if(   GC_List__c   ,&quot;TRUE&quot;,if(  ICP_List__c   ,&quot;TRUE&quot;,if(  ICPMS_List__c   ,&quot;TRUE&quot;,if(   IR_List__c  ,&quot;TRUE&quot;,if(   TEA_List__c   ,&quot;TRUE&quot;,if(    UVS_List__c   ,&quot;TRUE&quot;,if(     AS_Consumables_List__c   ,&quot;TRUE&quot;,NULL)))))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Analytical Mail List</label>
    <type>Text</type>
</CustomField>