Perkin-UAT/force-app/main/default/objects/Contact/fields/Analytical_News_Enewsletter__c.field-meta.xml
<CustomField>
    <fullName>Analytical_News_Enewsletter__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Select to depict subscription to the Analytical News Enewsletter</inlineHelpText>
    <label>Analytical News Enewsletter</label>
    <type>Checkbox</type>
</CustomField>