Perkin-UAT/force-app/main/default/objects/Contact/fields/ANP_List__c.field-meta.xml
<CustomField>
    <fullName>ANP_List__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ANP List</label>
    <type>Checkbox</type>
</CustomField>