Perkin-UAT/force-app/main/default/objects/Contact/fields/Apogee_Search_Type__c.field-meta.xml
<CustomField>
    <fullName>Apogee_Search_Type__c</fullName>
    <label>Apogee Search Type</label>
    <length>64</length>
    <type>Text</type>
</CustomField>