Perkin-UAT/force-app/main/default/objects/Contact/fields/Apogee_Source_Code__c.field-meta.xml
<CustomField>
    <fullName>Apogee_Source_Code__c</fullName>
    <label>Apogee Source Code</label>
    <length>64</length>
    <type>Text</type>
</CustomField>