Perkin-UAT/force-app/main/default/objects/Contact/fields/Application_Focus__c.field-meta.xml
<CustomField>
    <fullName>Application_Focus__c</fullName>
    <label>BD Application Focus</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>ADME Tox</fullName>
            </value>
            <value>
                <fullName>Agent Development</fullName>
            </value>
            <value>
                <fullName>Animal Models &amp; Service</fullName>
            </value>
            <value>
                <fullName>Antibodies</fullName>
            </value>
            <value>
                <fullName>Automated Sample Prep</fullName>
            </value>
            <value>
                <fullName>Basic Supplies</fullName>
            </value>
            <value>
                <fullName>Biologics /Immunogenicity</fullName>
            </value>
            <value>
                <fullName>Biomarker</fullName>
            </value>
            <value>
                <fullName>Blood Banks</fullName>
            </value>
            <value>
                <fullName>Blotting Experiments</fullName>
            </value>
            <value>
                <fullName>Cancer</fullName>
            </value>
            <value>
                <fullName>Cellular Assays</fullName>
            </value>
            <value>
                <fullName>Cellular Imaging &amp; Analysis</fullName>
            </value>
            <value>
                <fullName>Cloning</fullName>
            </value>
            <value>
                <fullName>Developmental Biology</fullName>
            </value>
            <value>
                <fullName>DNA</fullName>
            </value>
            <value>
                <fullName>DNA/RNA Labeling</fullName>
            </value>
            <value>
                <fullName>Drug Discovery</fullName>
            </value>
            <value>
                <fullName>ELISA/Immunoassay/RIA</fullName>
            </value>
            <value>
                <fullName>Epigenetics</fullName>
            </value>
            <value>
                <fullName>Flow Cytometry</fullName>
            </value>
            <value>
                <fullName>Forensics</fullName>
            </value>
            <value>
                <fullName>General Imaging</fullName>
            </value>
            <value>
                <fullName>Genetic Disease</fullName>
            </value>
            <value>
                <fullName>Genotyping</fullName>
            </value>
            <value>
                <fullName>GPCR</fullName>
            </value>
            <value>
                <fullName>HLA Typing</fullName>
            </value>
            <value>
                <fullName>Host cells</fullName>
            </value>
            <value>
                <fullName>ICH/ISH</fullName>
            </value>
            <value>
                <fullName>Imaging/Analysis</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>