Perkin-UAT/force-app/main/default/objects/Contact/fields/Areas_of_Work__c.field-meta.xml
<CustomField>
    <fullName>Areas_of_Work__c</fullName>
    <description>changed from Areas Of  Work</description>
    <inlineHelpText>Please choose all that apply.</inlineHelpText>
    <label>Market Segment</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Academia</fullName>
            </value>
            <value>
                <fullName>Aerospace</fullName>
            </value>
            <value>
                <fullName>Agriculture</fullName>
            </value>
            <value>
                <fullName>Assay Development</fullName>
            </value>
            <value>
                <fullName>Automotive</fullName>
            </value>
            <value>
                <fullName>Basic Research</fullName>
            </value>
            <value>
                <fullName>Biofuels</fullName>
            </value>
            <value>
                <fullName>Biotherapeutics</fullName>
            </value>
            <value>
                <fullName>Chemicals</fullName>
            </value>
            <value>
                <fullName>Clinical / Biomonitoring</fullName>
            </value>
            <value>
                <fullName>Clinical Genetics and Diagnostics</fullName>
            </value>
            <value>
                <fullName>Consumer products and Product Safety</fullName>
            </value>
            <value>
                <fullName>Core</fullName>
            </value>
            <value>
                <fullName>Diagnostics</fullName>
            </value>
            <value>
                <fullName>Drug Development</fullName>
            </value>
            <value>
                <fullName>Drug Discovery</fullName>
            </value>
            <value>
                <fullName>Electronic Components / Electroplating</fullName>
            </value>
            <value>
                <fullName>Energy</fullName>
            </value>
            <value>
                <fullName>Environmental</fullName>
            </value>
            <value>
                <fullName>Food</fullName>
            </value>
            <value>
                <fullName>Food Manufacturing</fullName>
            </value>
            <value>
                <fullName>Food R&amp;D and Contract Testing</fullName>
            </value>
            <value>
                <fullName>Foods &amp; Beverages</fullName>
            </value>
            <value>
                <fullName>Forensics</fullName>
            </value>
            <value>
                <fullName>Functional Genomics/Proteomics</fullName>
            </value>
            <value>
                <fullName>General Manufacturing</fullName>
            </value>
            <value>
                <fullName>Genetic Screening</fullName>
            </value>
            <value>
                <fullName>Genomics</fullName>
            </value>
            <value>
                <fullName>Government</fullName>
            </value>
            <value>
                <fullName>High Throughput Screening</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>