Perkin-UAT/force-app/main/default/objects/Contact/fields/AS_Product_Family_Interest__c.field-meta.xml
<CustomField>
    <fullName>AS_Product_Family_Interest__c</fullName>
    <description>Currently used in the background with external cross mapping of primary and detailed product interest</description>
    <label>AS Product Family Interest</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>04-AA</fullName>
            </value>
            <value>
                <fullName>05-ICP</fullName>
            </value>
            <value>
                <fullName>06-MAS</fullName>
            </value>
            <value>
                <fullName>07-TEA</fullName>
            </value>
            <value>
                <fullName>08-GC</fullName>
            </value>
            <value>
                <fullName>09-LC</fullName>
            </value>
            <value>
                <fullName>10-IR</fullName>
            </value>
            <value>
                <fullName>11-UVS</fullName>
            </value>
            <value>
                <fullName>12-ESS</fullName>
            </value>
            <value>
                <fullName>30-RAM</fullName>
            </value>
            <value>
                <fullName>40-LCM</fullName>
            </value>
            <value>
                <fullName>42-TOF</fullName>
            </value>
            <value>
                <fullName>71-MBA</fullName>
            </value>
            <value>
                <fullName>77-GCM</fullName>
            </value>
            <value>
                <fullName>94-LCA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>