Perkin-UAT/force-app/main/default/objects/Contact/fields/ASProductFamilyCount__c.field-meta.xml
<CustomField>
    <fullName>ASProductFamilyCount__c</fullName>
    <description>used to count the number of records where AS product family interest is filled in</description>
    <formula>IF(ISBLANK(AS_Product_Family_Interest__c), 0, 1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AS Product Family Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>