Perkin-UAT/force-app/main/default/objects/Contact/fields/Assays__c.field-meta.xml
<CustomField>
    <fullName>Assays__c</fullName>
    <label>Diagnostics – Assays</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>17OHP</fullName>
            </value>
            <value>
                <fullName>aCGH</fullName>
            </value>
            <value>
                <fullName>ADAM-12</fullName>
            </value>
            <value>
                <fullName>AFP</fullName>
            </value>
            <value>
                <fullName>Biotinidase</fullName>
            </value>
            <value>
                <fullName>BoBs</fullName>
            </value>
            <value>
                <fullName>CGX Oligo Arrays</fullName>
            </value>
            <value>
                <fullName>CGX Onco Arrays</fullName>
            </value>
            <value>
                <fullName>fbHCG</fullName>
            </value>
            <value>
                <fullName>FragilEase</fullName>
            </value>
            <value>
                <fullName>G6PD</fullName>
            </value>
            <value>
                <fullName>GALT</fullName>
            </value>
            <value>
                <fullName>Hb</fullName>
            </value>
            <value>
                <fullName>HCG</fullName>
            </value>
            <value>
                <fullName>IRT</fullName>
            </value>
            <value>
                <fullName>KaryoLite BoBs</fullName>
            </value>
            <value>
                <fullName>MSMS</fullName>
            </value>
            <value>
                <fullName>NT4</fullName>
            </value>
            <value>
                <fullName>NTSH</fullName>
            </value>
            <value>
                <fullName>PAPPA</fullName>
            </value>
            <value>
                <fullName>PKU</fullName>
            </value>
            <value>
                <fullName>PP13</fullName>
            </value>
            <value>
                <fullName>Prenatal BoBs</fullName>
            </value>
            <value>
                <fullName>Steroids</fullName>
            </value>
            <value>
                <fullName>TGAL</fullName>
            </value>
            <value>
                <fullName>TOXO</fullName>
            </value>
            <value>
                <fullName>uE3</fullName>
            </value>
            <value>
                <fullName>Vitamin D</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>