Perkin-UAT/force-app/main/default/objects/Contact/fields/B2B_Enabled_As_Commerce_User__c.field-meta.xml
<CustomField>
    <fullName>B2B_Enabled_As_Commerce_User__c</fullName>
    <defaultValue>false</defaultValue>
    <label>B2B Enabled As Commerce User</label>
    <type>Checkbox</type>
</CustomField>