Perkin-UAT/force-app/main/default/objects/Contact/fields/BD_Contact_Name_Label__c.field-meta.xml
<CustomField>
    <fullName>BD_Contact_Name_Label__c</fullName>
    <description>Used in screen flow when creating a quote from an opportunity. Allows a user to search by additional fields when searching.</description>
    <formula>FirstName &amp;&quot; &quot;&amp; LastName &amp;&quot; - &quot;&amp;  PKI_SAP_Contact_ID__c</formula>
    <label>Contact Name Label</label>
    <type>Text</type>
</CustomField>