Perkin-UAT/force-app/main/default/objects/Contact/fields/BD_Record_Type_formula__c.field-meta.xml
<CustomField>
    <fullName>BD_Record_Type_formula__c</fullName>
    <formula>RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Record Type</label>
    <type>Text</type>
</CustomField>