Perkin-UAT/force-app/main/default/objects/Contact/fields/Bead_cAMP__c.field-meta.xml
<CustomField>
    <fullName>Bead_cAMP__c</fullName>
    <label>Bead cAMP</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Amersham</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>