Perkin-UAT/force-app/main/default/objects/Contact/fields/Biological_Drug_Discovery__c.field-meta.xml
<CustomField>
    <fullName>Biological_Drug_Discovery__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Application Focus area</description>
    <label>Biological Drug Discovery</label>
    <type>Checkbox</type>
</CustomField>