Perkin-UAT/force-app/main/default/objects/Contact/fields/Biomarker__c.field-meta.xml
<CustomField>
    <fullName>Biomarker__c</fullName>
    <defaultValue>false</defaultValue>
    <description>For App Focus</description>
    <label>Biomarker</label>
    <type>Checkbox</type>
</CustomField>