Perkin-UAT/force-app/main/default/objects/Contact/fields/BRET_2__c.field-meta.xml
<CustomField>
    <fullName>BRET_2__c</fullName>
    <label>BRET-2</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>PKI</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>