Perkin-UAT/force-app/main/default/objects/Contact/fields/BU__c.field-meta.xml
<CustomField>
    <fullName>BU__c</fullName>
    <description>Business Unit</description>
    <inlineHelpText>Select all that apply.</inlineHelpText>
    <label>BU</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Dx</fullName>
            </value>
            <value>
                <fullName>IDS</fullName>
            </value>
            <value>
                <fullName>INF</fullName>
            </value>
            <value>
                <fullName>LST</fullName>
            </value>
            <value>
                <fullName>MED</fullName>
            </value>
            <value>
                <fullName>SVC</fullName>
            </value>
            <value>
                <fullName>ONE</fullName>
            </value>
            <value>
                <fullName>EH</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>