Perkin-UAT/force-app/main/default/objects/Contact/fields/Building__c.field-meta.xml
<CustomField>
    <fullName>Building__c</fullName>
    <label>Building Location</label>
    <length>80</length>
    <type>Text</type>
</CustomField>