Perkin-UAT/force-app/main/default/objects/Contact/fields/CALP_Product_Data__c.field-meta.xml
<CustomField>
    <fullName>CALP_Product_Data__c</fullName>
    <label>CALP Product Data</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>