Perkin-UAT/force-app/main/default/objects/Contact/fields/CALP_Specialty__c.field-meta.xml
<CustomField>
    <fullName>CALP_Specialty__c</fullName>
    <label>CALP Specialty</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>NextGen Sequencing</fullName>
            </value>
            <value>
                <fullName>Antibody Production</fullName>
            </value>
            <value>
                <fullName>Assay Development</fullName>
            </value>
            <value>
                <fullName>Automation Engineer</fullName>
            </value>
            <value>
                <fullName>Bioinformatics</fullName>
            </value>
            <value>
                <fullName>Cell Biology</fullName>
            </value>
            <value>
                <fullName>Chemistry</fullName>
            </value>
            <value>
                <fullName>Compound Management</fullName>
            </value>
            <value>
                <fullName>DNA/RNA-Electrophoresis</fullName>
            </value>
            <value>
                <fullName>DNA/RNA-Gene Expression</fullName>
            </value>
            <value>
                <fullName>DNA/RNA-Genotyping</fullName>
            </value>
            <value>
                <fullName>DNA/RNA-Isolation</fullName>
            </value>
            <value>
                <fullName>DNA/RNA-Microarray</fullName>
            </value>
            <value>
                <fullName>DNA/RNA-Sequencing / PCR</fullName>
            </value>
            <value>
                <fullName>Extractions/Sample Prep</fullName>
            </value>
            <value>
                <fullName>GPCR</fullName>
            </value>
            <value>
                <fullName>OEM</fullName>
            </value>
            <value>
                <fullName>Protein-Electrophoresis</fullName>
            </value>
            <value>
                <fullName>Protein-Enzymology/Kinetics</fullName>
            </value>
            <value>
                <fullName>Protein-Microarray</fullName>
            </value>
            <value>
                <fullName>Protein Expression/Production</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>PDQ Method Development</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>