Perkin-UAT/force-app/main/default/objects/Contact/fields/CAPCombo__c.field-meta.xml
<CustomField>
    <fullName>CAPCombo__c</fullName>
    <formula>BLANKVALUE(Email,&#39;&#39;) + BLANKVALUE(Completion_Action_Product__c,&#39;&#39;) + BLANKVALUE(IGOR_PAC__c ,&#39;&#39;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CAPCombo</label>
    <type>Text</type>
</CustomField>