Perkin-UAT/force-app/main/default/objects/Contact/fields/Cellular_Assays__c.field-meta.xml
<CustomField>
    <fullName>Cellular_Assays__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Application Focus Area</description>
    <label>Cellular Assays</label>
    <type>Checkbox</type>
</CustomField>