Perkin-UAT/force-app/main/default/objects/Contact/fields/Channel_Provider_DNA_Technologies__c.field-meta.xml
<CustomField>
    <fullName>Channel_Provider_DNA_Technologies__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Channel Provider DNA Technologies</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>