Perkin-UAT/force-app/main/default/objects/Contact/fields/Cluster_ID_Account__c.field-meta.xml
<CustomField>
    <fullName>Cluster_ID_Account__c</fullName>
    <description>This field is autopolualted on changes of cluster ID at account or edit of Contact (S-693686)</description>
    <inlineHelpText>This is the Account&#39;s Cluster ID from EBX</inlineHelpText>
    <label>Cluster ID (Account)</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>