Perkin-UAT/force-app/main/default/objects/Contact/fields/Company_Industry__c.field-meta.xml
<CustomField>
    <fullName>Company_Industry__c</fullName>
    <label>Company Industry</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>ACADEMIC</fullName>
            </value>
            <value>
                <fullName>AEROSPACE / DEFENSE</fullName>
            </value>
            <value>
                <fullName>CHEMICAL</fullName>
            </value>
            <value>
                <fullName>CONSUMER PRODUCTS</fullName>
            </value>
            <value>
                <fullName>CRO / INDEPENDENT TESTING LAB</fullName>
            </value>
            <value>
                <fullName>DEALER</fullName>
            </value>
            <value>
                <fullName>DISTRIBUTOR</fullName>
            </value>
            <value>
                <fullName>ENERGY</fullName>
            </value>
            <value>
                <fullName>ENVIRONMENTAL</fullName>
            </value>
            <value>
                <fullName>FOOD &amp; BEVERAGE</fullName>
            </value>
            <value>
                <fullName>GOVERNMENT</fullName>
            </value>
            <value>
                <fullName>HEALTHCARE</fullName>
            </value>
            <value>
                <fullName>MANUFACTURING GENERAL</fullName>
            </value>
            <value>
                <fullName>OTHER</fullName>
            </value>
            <value>
                <fullName>PHARMACEUTICAL / BIOTECHNOLOGY</fullName>
            </value>
            <value>
                <fullName>SECURITY</fullName>
            </value>
            <value>
                <fullName>TRANSPORTATION</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>