Perkin-UAT/force-app/main/default/objects/Contact/fields/Completion_Action_Product__c.field-meta.xml
<CustomField>
    <fullName>Completion_Action_Product__c</fullName>
    <label>Single Product Line</label>
    <length>255</length>
    <type>Text</type>
</CustomField>