Perkin-UAT/force-app/main/default/objects/Contact/fields/Contact_Billing_City__c.field-meta.xml
<CustomField>
    <fullName>Contact_Billing_City__c</fullName>
    <label>Contact Billing City</label>
    <type>TextArea</type>
</CustomField>