Perkin-UAT/force-app/main/default/objects/Contact/fields/Contact_Billing_Country__c.field-meta.xml
<CustomField>
    <fullName>Contact_Billing_Country__c</fullName>
    <label>Contact Billing Country</label>
    <type>TextArea</type>
</CustomField>