Perkin-UAT/force-app/main/default/objects/Contact/fields/Contact_Billing_Street__c.field-meta.xml
<CustomField>
    <fullName>Contact_Billing_Street__c</fullName>
    <label>Contact Billing Street</label>
    <type>TextArea</type>
</CustomField>