Perkin-UAT/force-app/main/default/objects/Contact/fields/Contact_Default_SAP_Bill_To_Number__c.field-meta.xml
<CustomField>
    <fullName>Contact_Default_SAP_Bill_To_Number__c</fullName>
    <label>Contact Default SAP Bill To Number</label>
    <type>TextArea</type>
</CustomField>