Perkin-UAT/force-app/main/default/objects/Contact/fields/Contact_Details_Verified_By__c.field-meta.xml
<CustomField>
    <fullName>Contact_Details_Verified_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact Details Verified By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>