Perkin-UAT/force-app/main/default/objects/Contact/fields/Contact_Details_Verified_On__c.field-meta.xml
<CustomField>
    <fullName>Contact_Details_Verified_On__c</fullName>
    <label>Contact Details Verified On</label>
    <type>Date</type>
</CustomField>