Perkin-UAT/force-app/main/default/objects/Contact/fields/Contact_LegacyID__c.field-meta.xml
<CustomField>
    <fullName>Contact_LegacyID__c</fullName>
    <externalId>true</externalId>
    <label>Contact Legacy ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>