Perkin-UAT/force-app/main/default/objects/Contact/fields/Contact_Mailing_Country_Count__c.field-meta.xml
<CustomField>
    <fullName>Contact_Mailing_Country_Count__c</fullName>
    <description>This counts the number of field completetions for this field.</description>
    <formula>IF(MailingCountry=&quot;&quot;,0,1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Mailing Country Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>