Perkin-UAT/force-app/main/default/objects/Contact/fields/Contact_Manager_Email__c.field-meta.xml
<CustomField>
    <fullName>Contact_Manager_Email__c</fullName>
    <description>Gets stamped with the managers email</description>
    <label>Contact Manager Email</label>
    <type>Email</type>
</CustomField>