Perkin-UAT/force-app/main/default/objects/Contact/fields/Contact_Mkt_Segment_Count__c.field-meta.xml
<CustomField>
    <fullName>Contact_Mkt_Segment_Count__c</fullName>
    <formula>IF(ISBLANK(Areas_of_Work__c), 0, 1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Mkt Segment Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>