Perkin-UAT/force-app/main/default/objects/Contact/fields/Contact_Old_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Contact_Old_Account_Name__c</fullName>
    <label>Contact Old Account Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>