Perkin-UAT/force-app/main/default/objects/Contact/fields/Contact_Old_Account_Site__c.field-meta.xml
<CustomField>
    <fullName>Contact_Old_Account_Site__c</fullName>
    <label>Contact Old Account Site</label>
    <type>TextArea</type>
</CustomField>