Perkin-UAT/force-app/main/default/objects/Contact/fields/Contact_Owner__c.field-meta.xml
<CustomField>
    <fullName>Contact_Owner__c</fullName>
    <description>Field used for Owner export via API</description>
    <formula>Owner.FirstName &amp; &quot; &quot; &amp; Owner.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Owner</label>
    <type>Text</type>
</CustomField>