Perkin-UAT/force-app/main/default/objects/Contact/fields/Contact_Sales_Office_GeoCode__c.field-meta.xml
<CustomField>
    <fullName>Contact_Sales_Office_GeoCode__c</fullName>
    <label>Contact Sales Office (GeoCode)</label>
    <type>TextArea</type>
</CustomField>