Perkin-UAT/force-app/main/default/objects/Contact/fields/Contact_Shipping_City__c.field-meta.xml
<CustomField>
    <fullName>Contact_Shipping_City__c</fullName>
    <label>Contact Shipping City</label>
    <type>TextArea</type>
</CustomField>