Perkin-UAT/force-app/main/default/objects/Contact/fields/Contact_Shipping_Country__c.field-meta.xml
<CustomField>
    <fullName>Contact_Shipping_Country__c</fullName>
    <label>Contact Shipping Country</label>
    <type>TextArea</type>
</CustomField>