Perkin-UAT/force-app/main/default/objects/Contact/fields/Contact_Shipping_State_Province__c.field-meta.xml
<CustomField>
    <fullName>Contact_Shipping_State_Province__c</fullName>
    <label>Contact Shipping State/Province</label>
    <type>TextArea</type>
</CustomField>