Perkin-UAT/force-app/main/default/objects/Contact/fields/Contact_Shipping_Street__c.field-meta.xml
<CustomField>
    <fullName>Contact_Shipping_Street__c</fullName>
    <label>Contact Shipping Street</label>
    <type>TextArea</type>
</CustomField>