Perkin-UAT/force-app/main/default/objects/Contact/fields/Contact_Shipping_Zip_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Contact_Shipping_Zip_Postal_Code__c</fullName>
    <label>Contact Shipping Zip/Postal Code</label>
    <type>TextArea</type>
</CustomField>